--- a/client/src/sass/App.sass
+++ b/client/src/sass/App.sass
@@ -37,3 +37,7 @@ body
             &-item.active
                 a
                     color: $main-color
+
+.deviceList 
+    display: flex
+    justify-content: center
